--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>GenAI Documentation Agent</title>
-  <link rel="stylesheet" href="/static/style.css" />
+  <link rel="stylesheet" href="./style.css" />
+
 </head>
 <body>
 
@@ -58,6 +59,7 @@
     <pre id="output"></pre>
   </div>
 
-  <script src="/static/script.js"></script>
+<script src="./script.js"></script>
+
 </body>
 </html>
